<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.darwindeveloper.wcviewpager.WrapContentViewPager
        android:id="@+id/wrap_content_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerviewIndicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>