...
            android:padding="@dimen/text_padding"
            android:text="@string/refresh" />

    </LinearLayout>

    <com.darwindeveloper.wcviewpager.WCViewPagerIndicator
        android:id="@+id/wcviewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorSelectedColor="@color/colorPrimary"
        app:indicatorsColor="#d2d2d2"
        app:numberSelectedColor="#fff"
        app:numbersColor="@color/colorPrimary"
...
